--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
     />
     <!-- Our Custom Styles -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <style>
       body {
         font-family: "Source Sans Pro", sans-serif;
