--- a/index.html
+++ b/index.html
@@ -18,26 +18,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
     />
-
-    <!-- Bootstrap Icons -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
-      rel="stylesheet"
-    />
     <!-- Our Custom Styles -->
     <link rel="stylesheet" href="style.css" />
-    <style>
-      body {
-        font-family: "Source Sans Pro", sans-serif;
-      }
-    </style>
   </head>
   <body>
     <!-- 1) Navbar -->
 
     <nav class="navbar navbar-dark bg-dark fixed-top">
       <div class="container justify-content-center">
-        <a class="navbar-brand d-none" href="#">Miniport</a>
         <div class="collapse navbar-collapse show" id="navbarNav">
           <ul class="navbar-nav flex-row justify-content-center w-100">
             <li class="nav-item mx-2 px-2">
@@ -61,15 +49,14 @@
 
     <section id="top" class="py-5 py-md-6 py-lg-7">
       <div class="container py-5 mt-5">
-        <div class="row g-0 d-flex flex-wrap align-items-center">
+        <div class="row d-flex flex-wrap align-items-center">
           <div
             class="col-12 col-lg-5 order-1 order-lg-1 text-center mb-4 mb-lg-0"
           >
             <img
               src="https://html5up.net/uploads/demos/miniport/images/pic00.jpg"
               alt="Jane Doe"
-              class="img-fluid"
-              style="border-radius: 100%"
+              class="img-fluid w-75 w-lg-100 rounded-circle"
             />
           </div>
 
@@ -77,24 +64,20 @@
             class="col-12 col-lg-7 order-2 order-lg-2 text-center text-lg-start"
           >
             <h1>
-              <span id="topSectionLightText">Hi. I'm </span>
+              <span id="top-section-light-text">Hi. I'm </span>
               <strong id="">Jane Doe</strong>.
             </h1>
-            <p style="color: #888888; margin-top: 2em" class="fs-5">
-              And this is <strong style="color: #3e3e3e">Miniport</strong>, a
-              free, fully responsive HTML5 site template designed by
-              <a style="color: #888888" href="https://twitter.com/ajlkn">AJ</a>
-              for
-              <a style="color: #888888" href="https://html5up.net">HTML5 UP</a>
-              & released under the
-              <a style="color: #888888" href="https://html5up.net/license"
-                >CCA license</a
-              >.
+            <p class="fs-5 custom-text">
+              And this is <strong>Miniport</strong>, a free, fully responsive
+              HTML5 site template designed by
+              <a href="https://twitter.com/ajlkn" class="top-anchors-hover-color">AJ</a> for
+              <a href="https://html5up.net" class="top-anchors-hover-color">HTML5 UP</a> & released under the
+              <a href="https://html5up.net/license" class="top-anchors-hover-color">CCA license</a>.
             </p>
             <a
               href="#work"
-              class="btn btn-primary mt-3 myButton"
-              id="topSectionButton"
+              class="btn btn-primary mt-3 my-button"
+              id="top-section-button"
               >Learn about what I do</a
             >
           </div>
@@ -106,10 +89,10 @@
 
     <section id="work" class="py-5 py-md-6 py-lg-7">
       <!-- Flexbox #1 -->
-      <div class="d-flex flex-column align-items-center gap-3">
+      <div class="d-flex flex-column align-items-center gap-3 container">
         <header>
           <h2 class="text-center"><b>Here's all the stuff I do.</b></h2>
-          <p style="font-size: 16px" class="homeLightText text-center">
+          <p class="home-light-text text-center">
             Odio turpis amet sed consequat eget posuere consequat.
           </p>
         </header>
@@ -117,13 +100,13 @@
         <!-- Flexbox #2 -->
         <div class="d-flex flex-wrap justify-content-center gap-3">
           <!-- card 1 -->
-          <div class="card" style="width: 18rem; height: 20rem">
+          <div class="card card-height-width">
             <div
               class="card-body d-flex flex-column justify-content-center align-items-center text-center"
             >
-              <i class="fas fa-comment fa-4x mb-3 iconColor"></i>
+              <i class="fas fa-comment fa-4x mb-3 icon-color"></i>
               <h3 class="card-title cardHeadingColor">Consequat lorem</h3>
-              <p class="card-text homeLightText">
+              <p class="card-text home-light-text">
                 Ornare nulla proin odio consequat sapien vestibulum ipsum primis
                 sed amet consequat lorem dolore.
               </p>
@@ -131,13 +114,13 @@
           </div>
 
           <!-- card 2 -->
-          <div class="card" style="width: 18rem; height: 20rem">
+          <div class="card card-height-width">
             <div
               class="card-body d-flex flex-column justify-content-center align-items-center text-center"
             >
-              <i class="fas fa-camera fa-4x mb-3 iconColor"></i>
+              <i class="fas fa-camera fa-4x mb-3 icon-color"></i>
               <h3 class="card-title cardHeadingColor">Lorem dolor tempus</h3>
-              <p class="card-text homeLightText">
+              <p class="card-text home-light-text">
                 Ornare nulla proin odio consequat sapien vestibulum ipsum primis
                 sed amet consequat lorem dolore.
               </p>
@@ -145,13 +128,13 @@
           </div>
 
           <!-- card 3 -->
-          <div class="card" style="width: 18rem; height: 20rem">
+          <div class="card card-height-width">
             <div
               class="card-body d-flex flex-column justify-content-center align-items-center text-center"
             >
-              <i class="fas fa-thumbs-up fa-4x mb-3 iconColor"></i>
+              <i class="fas fa-thumbs-up fa-4x mb-3 icon-color"></i>
               <h3 class="card-title cardHeadingColor">Feugiat posuere</h3>
-              <p class="card-text homeLightText">
+              <p class="card-text home-light-text">
                 Ornare nulla proin odio consequat sapien vestibulum ipsum primis
                 sed amet consequat lorem dolore.
               </p>
@@ -160,13 +143,13 @@
         </div>
 
         <footer class="mt-4">
-          <p class="homeLightText text-center">
+          <p class="home-light-text text-center">
             Lorem ipsum dolor sit sapien vestibulum ipsum primis?
           </p>
           <a
             href="#portfolio"
-            class="btn btn-primary mt-3 d-block mx-auto text-center myButton"
-            id="workButton"
+            class="btn btn-primary mt-3 d-block mx-auto text-center my-button"
+            id="work-button"
           >
             See some of my recent work
           </a>
@@ -181,7 +164,7 @@
       <div class="d-flex flex-column align-items-center gap-3 container">
         <header>
           <h2 class="text-center"><b>Here’s some stuff I made recently.</b></h2>
-          <p style="font-size: 16px" class="homeLightText text-center">
+          <p class="home-light-text text-center">
             Proin odio consequat sapien vestibulum consequat lorem dolore
             feugiat.
           </p>
@@ -190,11 +173,11 @@
         <!-- Flexbox #2 -->
         <div class="d-flex flex-wrap justify-content-center gap-3">
           <!-- card 1 -->
-          <div class="card" style="width: 18rem; height: 20rem">
+          <div class="card card-height-width">
             <img
               src="https://html5up.net/uploads/demos/miniport/images/pic01.jpg"
-              class="card-img-top img-fluid"
-              style="height: 70%; object-fit: cover"
+              class="card-img-top img-fluid object-fit-cover"
+              style="height: 70%"
               alt="..."
             />
             <div
@@ -204,14 +187,14 @@
               <h3 class="portfolio-card-title card-title cardHeadingColor mb-1">
                 <a href="#">Magna feugiat</a>
               </h3>
-              <p class="card-text homeLightText small mb-0">
+              <p class="card-text home-light-text small mb-0">
                 Ornare nulla proin odio consequat.
               </p>
             </div>
           </div>
 
           <!-- card 2 -->
-          <div class="card" style="width: 18rem; height: 20rem">
+          <div class="card card-height-width">
             <img
               src="https://html5up.net/uploads/demos/miniport/images/pic02.jpg"
               class="card-img-top img-fluid"
@@ -225,14 +208,14 @@
               <h3 class="portfolio-card-title card-title cardHeadingColor mb-1">
                 <a href="#">Veroeros primis</a>
               </h3>
-              <p class="card-text homeLightText small mb-0">
+              <p class="card-text home-light-text small mb-0">
                 Ornare nulla proin odio consequat.
               </p>
             </div>
           </div>
 
           <!-- card 3 -->
-          <div class="card" style="width: 18rem; height: 20rem">
+          <div class="card card-height-width">
             <img
               src="https://html5up.net/uploads/demos/miniport/images/pic03.jpg"
               class="card-img-top img-fluid"
@@ -246,14 +229,14 @@
               <h3 class="portfolio-card-title card-title cardHeadingColor mb-1">
                 <a href="#">Lorem ipsum</a>
               </h3>
-              <p class="card-text homeLightText small mb-0">
+              <p class="card-text home-light-text small mb-0">
                 Ornare nulla proin odio consequat.
               </p>
             </div>
           </div>
 
           <!-- card 4 -->
-          <div class="card" style="width: 18rem; height: 20rem">
+          <div class="card card-height-width">
             <img
               src="https://html5up.net/uploads/demos/miniport/images/pic04.jpg"
               class="card-img-top img-fluid"
@@ -267,14 +250,14 @@
               <h3 class="portfolio-card-title card-title cardHeadingColor mb-1">
                 <a href="#">Tempus dolore</a>
               </h3>
-              <p class="card-text homeLightText small mb-0">
+              <p class="card-text home-light-text small mb-0">
                 Ornare nulla proin odio consequat.
               </p>
             </div>
           </div>
 
           <!-- card 5 -->
-          <div class="card" style="width: 18rem; height: 20rem">
+          <div class="card card-height-width">
             <img
               src="https://html5up.net/uploads/demos/miniport/images/pic05.jpg"
               class="card-img-top img-fluid"
@@ -288,14 +271,14 @@
               <h3 class="portfolio-card-title card-title cardHeadingColor mb-1">
                 <a href="#">Feugiat aliquam</a>
               </h3>
-              <p class="card-text homeLightText small mb-0">
+              <p class="card-text home-light-text small mb-0">
                 Ornare nulla proin odio consequat.
               </p>
             </div>
           </div>
 
           <!-- card 6 -->
-          <div class="card" style="width: 18rem; height: 20rem">
+          <div class="card card-height-width">
             <img
               src="https://html5up.net/uploads/demos/miniport/images/pic06.jpg"
               class="card-img-top img-fluid"
@@ -309,7 +292,7 @@
               <h3 class="portfolio-card-title card-title cardHeadingColor mb-1">
                 <a href="#">Sed amet ornare</a>
               </h3>
-              <p class="card-text homeLightText small mb-0">
+              <p class="card-text home-light-text small mb-0">
                 Ornare nulla proin odio consequat.
               </p>
             </div>
@@ -317,13 +300,13 @@
         </div>
 
         <footer class="mt-4">
-          <p class="homeLightText text-center">
+          <p class="home-light-text text-center">
             Lorem ipsum dolor sit sapien vestibulum ipsum primis?
           </p>
           <a
             href="#contact"
-            class="btn btn-primary mt-3 d-block mx-auto text-center myButton"
-            id="workButton"
+            class="btn btn-primary mt-3 d-block mx-auto text-center my-button"
+            id="work-button"
           >
             Get in touch with me
           </a>
@@ -336,8 +319,8 @@
     <section id="contact" class="py-5 py-md-6 py-lg-7">
       <div class="container">
         <header class="text-center mb-5">
-          <h2 id="contactHeading">Have me make stuff for you.</h2>
-          <p id="contactParagraph">
+          <h2 id="contact-heading">Have me make stuff for you.</h2>
+          <p id="contact-paragraph">
             Ornare nulla proin odio consequat sapien vestibulum ipsum.
           </p>
         </header>
@@ -388,16 +371,16 @@
                 <div
                   class="col-12 d-flex flex-wrap justify-content-center align-items-center gap-3 mt-4"
                 >
-                  <button
+                   <button
                     type="submit"
-                    class="btn btn-primary myButton contactFormButtons"
+                    class="btn btn-primary my-button contact-form-buttons"
                   >
                     Send Message
                   </button>
                   <button
                     type="reset"
-                    class="btn btn-primary myButton contactFormButtons"
-                    id="clearFormButton"
+                    class="btn btn-primary my-button contact-form-buttons"
+                    id="clear-form-button"
                   >
                     Clear Form
                   </button>
@@ -407,45 +390,45 @@
           </div>
 
           <div class="col-12 mt-5 text-center">
-            <hr class="horizantalRuler" />
+            <hr class="horizantal-ruler" />
             <h3><strong>Find me on ...</strong></h3>
             <div class="d-flex justify-content-center gap-3 flex-wrap mt-3">
-              <a href="#" class="text-dark fs-4 social-box" id="twitterIcon"
+              <a href="#" class="text-dark fs-4 social-box" id="twitter-icon"
                 ><i class="fab fa-twitter"></i
               ></a>
-              <a href="#" class="text-dark fs-4 social-box" id="facebookIcon"
+              <a href="#" class="text-dark fs-4 social-box" id="facebook-icon"
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a href="#" class="text-dark fs-4 social-box" id="dribbbleIcon"
+              <a href="#" class="text-dark fs-4 social-box" id="dribbble-icon"
                 ><i class="fab fa-dribbble"></i
               ></a>
-              <a href="#" class="text-dark fs-4 social-box" id="linkedinIcon"
+              <a href="#" class="text-dark fs-4 social-box" id="linkedin-icon"
                 ><i class="fab fa-linkedin-in"></i
               ></a>
-              <a href="#" class="text-dark fs-4 social-box" id="tumblrIcon"
+              <a href="#" class="text-dark fs-4 social-box" id="tumblr-icon"
                 ><i class="fab fa-tumblr"></i
               ></a>
-              <a href="#" class="text-dark fs-4 social-box" id="googlePlusIcon"
+              <a href="#" class="text-dark fs-4 social-box" id="googlePlus-icon"
                 ><i class="fab fa-google-plus-g"></i
               ></a>
-              <a href="#" class="text-dark fs-4 social-box" id="githubIcon"
+              <a href="#" class="text-dark fs-4 social-box" id="github-icon"
                 ><i class="fab fa-github"></i
               ></a>
             </div>
-            <hr class="horizantalRuler" />
+            <hr class="horizantal-ruler" />
           </div>
         </div>
 
         <footer class="text-center mt-4">
-          <ul class="list-inline footerListItems">
+          <ul class="list-inline footer-list-item">
             <li class="list-inline-item">
               &copy; Untitled. All rights reserved.
             </li>
             <li class="list-inline-item">
-              Design: <a href="https://html5up.net">HTML5 UP</a>
+              Design: <a href="https://html5up.net" class="footer-anchors-hover-color">HTML5 UP</a>
             </li>
             <li class="list-inline-item">
-              Demo Images: <a href="http://unsplash.com">Unsplash</a>
+              Demo Images: <a href="http://unsplash.com" class="footer-anchors-hover-color">Unsplash</a>
             </li>
           </ul>
         </footer>
